# sem11-computer-graphics-hw04

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp  model.blend  model.blend1  out.ppm
